# autoGen

./: .gitignore  Dockerfile  agent.ipynb  agent_history.json  agent_state.json  app.ipynb  app.py  autoGen4.ipynb  docker-compose.yml  env.example  mcpToolAgent.ipynb  memo.ipynb  old.toml  pyproject.toml  team.ipynb  tts.ipynb  webCrawlerAgent.ipynb
.cache/41/: cache.db
.chromadb_autogen/: chroma.sqlite3
coding/: team_state.json
qdrant_data/: raft_state.json
